[package]
name = "rmsgen"
version = "0.1.0"
edition = "2021"
description = "Hand-built R1CS/RMS toolkit with import, transform, execution, and demo circuits"
readme = "README.md"
publish = false
default-run = "rmsgen"

[dependencies]
ark-bn254 = "0.4"
ark-ff = "0.4"
rand = "0.8"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zstd = "0.13"
